# 2025-icorr-analysis

./: .gitignore  README.md  Test.ipynb  main.py  pyproject.toml  setup.py
.ipynb_checkpoints/: main-checkpoint.py
src/analysis_tools/: AreaUnderCurvePlottingUtilities.py  DataFrameClipper.py  PatientDataExtractor.py  __init__.py  area_under_curve_plotting_utilities.py  patient_data_extractor.py  plot_1.py  plot_2.py  plot_2_paper_version.py  plot_3.py  plotting_utilities.py
src/experimental_setup_plots/: dataRelease.py  expSetupFigures.py
src/experimental_setup_plots/util/: fileRead.py  plots.py  showPlots.py
src/gstd/: WorkingData.py  working_data.py
src/icorr.egg-info/: PKG-INFO  SOURCES.txt
src/icorr_data_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/murder_wall/: MurderWall.py  MurderWallAsset.py  MurderWallDetective.py  TrialData.py  TrialDataPath.py  __init__.py  experiment_parameters.py  murderwall.py  murderwall_asset.py  murderwall_detective.py  subject.py  trial_data.py  trial_data_path.py
src/preprocess/: proc_data_functions.py  proc_data_main.py
tests/: test_AnalysisTools.py
