[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src/"]
include = [
    "murder_wall",
    "analysis_tools",
]

[project]
name = "icorr-data-analysis"
version = "0.1.0"
description = "Description of your project."
authors = [
    {name = "Gabriel Parra", email = "Gabriel.r.parra@gmail.com"}
]
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "pandas-stubs",
    "mypy",
    "pytest",
    "seaborn"
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[[tool.mypy.overrides]]
module = [
    "murder_wall",
    "analysis_tools"
]

